# libsimg

./: CMakeLists.txt  README.md
src/: libsimg.c  libsimg.h
