cmake_minimum_required(VERSION 3.28.2)
file(GLOB_RECURSE SOURCES "src/*.c")
include(../../sdk/config.cmake)
project(sieelf_libsimg C)
add_library(libsimg SHARED ${SOURCES})
target_sdk_setup(libsimg NSG)
target_compile_options(libsimg BEFORE PUBLIC -std=c11 -Wall -Werror)
target_link_libraries(libsimg crt_helper gcc c)
set_target_properties(libsimg PROPERTIES LIBRARY_OUTPUT_NAME simg)
set_target_properties(libsimg PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../sdk/lib/)
